[gd_scene load_steps=11 format=3 uid="uid://r0mlur02hwy0"]

[ext_resource type="Script" path="res://player.gd" id="1_txa2y"]
[ext_resource type="Texture2D" uid="uid://bby2pvim3wa75" path="res://Assets/Programmer-Art/Programmer-Assets/ProgArt_Gun_SpriteSheet.png" id="2_1xfiy"]
[ext_resource type="AudioStream" uid="uid://dcnfcrb24yioe" path="res://Assets/Sounds/gunshot.wav" id="3_0ht5y"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vxju8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a0isg"]
atlas = ExtResource("2_1xfiy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_taw47"]
atlas = ExtResource("2_1xfiy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hngf"]
atlas = ExtResource("2_1xfiy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0dx4"]
atlas = ExtResource("2_1xfiy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay65c"]
atlas = ExtResource("2_1xfiy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_yg3q2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0isg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_taw47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hngf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0dx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay65c")
}],
"loop": false,
"name": &"shoot",
"speed": 6.0
}]

[node name="Player" type="CharacterBody3D" groups=["Player_Group"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_txa2y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_vxju8")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
target_position = Vector3(0, 0, -1000)
collision_mask = 3

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GunBase" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/GunBase"]
texture_filter = 1
texture_repeat = 1
position = Vector2(226, -178)
scale = Vector2(6.8125, 6.8125)
sprite_frames = SubResource("SpriteFrames_yg3q2")
animation = &"shoot"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="Crosshair" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.768627, 0.45098, 0.945098, 0.588235)

[node name="DeathScreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="CanvasLayer/DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -134.0
offset_right = 216.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/DeathScreen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -67.0
offset_right = 46.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
text = "YOU DIED :/"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="OnDeathRestartButton" type="Button" parent="CanvasLayer/DeathScreen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = 15.0
offset_right = 118.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0ht5y")
bus = &"SFX"
